<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder16dp"
        style="@style/Medium_22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/layout_16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/layout_16dp" />

    <TextView
        android:id="@+id/app"
        style="@style/Bold_32"
        android:layout_width="0dp"
        android:layout_height="@dimen/layout_92dp"
        android:gravity="center_vertical"
        android:text="@string/over_app_worked"
        app:layout_constraintEnd_toEndOf="@id/rightBorder16dp"
        app:layout_constraintStart_toStartOf="@id/leftBorder16dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name1"
        style="@style/Medium_16"
        android:layout_width="@dimen/layout_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_24dp"
        android:text="@string/Vladimir_Dahin"
        app:layout_constraintEnd_toEndOf="@id/rightBorder16dp"
        app:layout_constraintStart_toStartOf="@id/leftBorder16dp"
        app:layout_constraintTop_toBottomOf="@id/app" />

    <TextView
        android:id="@+id/name2"
        style="@style/Medium_16"
        android:layout_width="@dimen/layout_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_16dp"
        android:text="@string/Danil"
        app:layout_constraintEnd_toEndOf="@id/rightBorder16dp"
        app:layout_constraintStart_toStartOf="@id/leftBorder16dp"
        app:layout_constraintTop_toBottomOf="@id/name1" />

    <TextView
        android:id="@+id/name3"
        style="@style/Medium_16"
        android:layout_width="@dimen/layout_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_16dp"
        android:text="@string/Arman_Dosov"
        app:layout_constraintEnd_toEndOf="@id/rightBorder16dp"
        app:layout_constraintStart_toStartOf="@id/leftBorder16dp"
        app:layout_constraintTop_toBottomOf="@id/name2" />

    <TextView
        android:id="@+id/name4"
        style="@style/Medium_16"
        android:layout_width="@dimen/layout_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_16dp"
        android:text="@string/Sergey_Andreev"
        app:layout_constraintEnd_toEndOf="@id/rightBorder16dp"
        app:layout_constraintStart_toStartOf="@id/leftBorder16dp"
        app:layout_constraintTop_toBottomOf="@id/name3" />

</androidx.constraintlayout.widget.ConstraintLayout>
