<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/choosingRegionToolbar"
        style="@style/Medium_22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/choosing_region"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/layout_16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/layout_16dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/searchRegionEditText"
        style="@style/Regular_16"
        android:layout_width="@dimen/layout_0dp"
        android:layout_height="@dimen/layout_56dp"
        android:layout_marginHorizontal="@dimen/layout_16dp"
        android:autofillHints=""
        android:background="@drawable/bg_light_gray"
        android:drawableEnd="@drawable/ic_search"
        android:hint="@string/enter_region"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        android:paddingHorizontal="@dimen/layout_16dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textCursorDrawable="@drawable/bg_cursor"
        app:layout_constraintTop_toBottomOf="@id/choosingRegionToolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listRegionRecyclerView"
        android:layout_width="@dimen/layout_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_8dp"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/searchRegionEditText"
        app:layout_constraintStart_toStartOf="@id/leftBorder16dp"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/noRegionPlaceholder"
        android:layout_width="@dimen/layout_0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/searchEditText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/leftBorder16dp"
        app:layout_constraintEnd_toEndOf="@id/rightBorder16dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/noRegionImageView"
            style="@style/Medium_22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/image_empty_result"
            app:layout_constraintBottom_toTopOf="@id/text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/noRegionTextView"
            style="@style/Medium_22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_16dp"
            android:text="@string/no_such_region"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/noListPlaceholder"
        android:layout_width="@dimen/layout_0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/searchEditText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/leftBorder16dp"
        app:layout_constraintEnd_toEndOf="@id/rightBorder16dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/noListImageView"
            style="@style/Medium_22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/layout_8dp"
            android:src="@drawable/couldnt_get_list"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/noListTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/noListTextView"
            style="@style/Medium_22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_16dp"
            android:text="@string/couldnt_get_list"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
